hphp/hack/test/typecheck/shape/shape_put_wrong_arg_count.php
<?hh

function test(shape() $shape): shape() {
  return Shapes::put();
}
